--- a/.github/workflow/deploy-azure-resources.yaml
+++ b/.github/workflow/deploy-azure-resources.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Login with Azure
         uses: azure/login@v1
         with:
-          creds: '${{ secrets.AZURE_CREDENTIAL }}'
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
 
       # Deploys bicep script
       - name: Deploy the Bicep Script
