--- a/.github/workflow/deploy-azure-resources.yml
+++ b/.github/workflow/deploy-azure-resources.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Deploy the Bicep Script
         uses: azure/arm-deploy@v1
         with:
-          resourceGroupName: "WebAppGroup" #change to reflect your Resource Group
+          resourceGroupName: "WebAppGroup1" #change to reflect your Resource Group
           template: azure-resources.bicep
 
 ## ** You can uncomment below code to deploy the resources, but 
