--- a/.github/workflow/deploy-azure-resources.yml
+++ b/.github/workflow/deploy-azure-resources.yml
@@ -5,7 +5,7 @@ name: Azure Bicep Deployment
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "main" ] #you could use "master", but "main" is what works best
+    branches: [ "master" ] #you could use "master", but "main" is what works best
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -33,7 +33,7 @@ jobs:
       - name: Deploy the Bicep Script
         uses: azure/arm-deploy@v1
         with:
-          resourceGroupName: "WebAppGroup1" #change to reflect your Resource Group
+          resourceGroupName: "WebAppGroup" #change to reflect your Resource Group
           template: azure-resources.bicep
 
 ## ** You can uncomment below code to deploy the resources, but 
