--- a/.github/workflow/deploy-azure-resources.yml
+++ b/.github/workflow/deploy-azure-resources.yml
@@ -5,7 +5,7 @@ name: Azure Bicep Deployment
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ] #you could use "master", but "main" is what works best
+    branches: [ "main" ] #you could use "master", but "main" is what works best
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
