--- a/.github/workflow/deploy-azure-resources.yml
+++ b/.github/workflow/deploy-azure-resources.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 name: Azure Bicep Deployment
 
-# Controls when the workflow will run and automatically
+# Controls when the workflow will run123
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
